cmake_minimum_required(VERSION 3.16)

qt_examples_build_begin()
if(NOT CMAKE_CROSSCOMPILING) #QTBUG-86533
    if(QT_FEATURE_qtwebengine_build AND QT_FEATURE_qtwebengine_quick_build)
        add_subdirectory(webengine)
    endif()
    if(QT_FEATURE_qtwebengine_build AND QT_FEATURE_qtwebengine_widgets_build)
        add_subdirectory(webenginewidgets)
    endif()
    if(QT_FEATURE_qtpdf_build AND QT_FEATURE_qtpdf_quick_build)
        add_subdirectory(pdf)
    endif()
    if(QT_FEATURE_qtpdf_build AND QT_FEATURE_qtpdf_widgets_build)
        add_subdirectory(pdfwidgets)
    endif()
endif()
qt_examples_build_end()
