add_subdirectory(minimal)
add_subdirectory(contentmanipulation)
add_subdirectory(cookiebrowser)
add_subdirectory(notifications)
add_subdirectory(simplebrowser)
add_subdirectory(stylesheetbrowser)
add_subdirectory(videoplayer)
add_subdirectory(webui)
if(QT_FEATURE_webengine_geolocation)
    add_subdirectory(maps)
endif()
if(QT_FEATURE_webengine_webchannel)
    add_subdirectory(markdowneditor)
endif()
if(QT_FEATURE_webengine_printing_and_pdf)
    add_subdirectory(printme)
    add_subdirectory(html2pdf)
endif()
if(QT_FEATURE_webengine_spellchecker AND NOT CMAKE_CROSSCOMPILING AND NOT QT_FEATURE_webengine_native_spellchecker)
    add_subdirectory(spellchecker)
endif()
